# Drip-Stellar-ZK

./: .env.example  .gitignore  Anchor.toml  BENCHMARKS.md  Cargo.toml  DEMO.md  DRIP_PRIVATE.md  EXTENSIBILITY.md  LICENSE  README.md  next.config.js  package-lock.json  package.json
app/: globals.css  layout.tsx
app/dashboard/: page.tsx
app/docs/: page.tsx
app/faq/: page.tsx
app/verify/: page.tsx
components/compliance/: CompliancePage.tsx
components/dashboard/: DashboardApp.tsx  DashboardAppClient.tsx
components/docs/: DocsPage.tsx
components/faq/: FaqPage.tsx
drip_proof/: Nargo.toml  Prover.toml  build.sh
lib/: app-config.ts  docs-content.ts  mock-data.ts
programs/drip/: Cargo.toml
programs/drip/src/: lib.rs
stellar/: Cargo.toml
stellar/.cargo/: config.toml
stellar/contracts/drip_zk_verifier/: Cargo.toml
stellar/contracts/drip_zk_verifier/src/: lib.rs  test.rs
stellar/contracts/drip_zk_verifier/test_fixtures/: proof  public_inputs
stellar/contracts/drip_zk_verifier/test_snapshots/test/: test_double_initialize_fails.1.json  test_initialize_rejects_bad_vk.1.json  test_initialize_stores_admin_and_vk.1.json  test_register_and_get_commitment.1.json  test_register_commitment_wrong_payer_fails.1.json  test_verify_active_stream_passes_liveness.1.json  test_verify_below_min_duration_fails.1.json  test_verify_cancelled_stream_fails.1.json  test_verify_expired_stream_fails.1.json  test_verify_income_proof_wrong_commitment.1.json  test_verify_meets_min_duration_ok.1.json  test_verify_missing_commitment_errors.1.json  test_verify_paused_stream_fails.1.json  test_verify_wrong_proof_length_errors.1.json
stellar/crates/ultrahonk-soroban-verifier/: .gitignore  Cargo.toml  LICENSE  README.md  VERIFIER_PROVENANCE.md
stellar/crates/ultrahonk-soroban-verifier/src/: debug.rs  ec.rs  field.rs  hash.rs  lib.rs  relations.rs  shplemini.rs  sumcheck.rs  transcript.rs  types.rs  utils.rs  verifier.rs
(+20 files in other folders)
