[package]
name = "drip"
version = "0.1.0"
description = "DRIP native SOL streaming payments program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
