[package]
name = "drip-zk-verifier"
version = "0.1.0"
edition = "2021"
description = "Drip Private — Soroban UltraHonk verifier for confidential income proofs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { version = "26.0.1", features = ["alloc"] }
ultrahonk_soroban_verifier = { path = "../../crates/ultrahonk-soroban-verifier", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
