[package]
name = "ultrahonk_soroban_verifier"
version = "0.1.0"
edition = "2021"

license     = "MIT"
description = "Rust verifier for UltraHonk proofs (vendored from yugocabrio/rs-soroban-ultrahonk)"
repository  = "https://github.com/yugocabrio/rs-soroban-ultrahonk"

[dependencies]
soroban-sdk = { version = "26.0.1", default-features = false }

[features]
default = []
std = []
trace = []
